--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
   "name": "blockchain-developer-bootcamp-final-project",
   "version": "1.0.0",
-  "description": "## Motivation",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ashhanai/blockchain-developer-bootcamp-final-project.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ashhanai/blockchain-developer-bootcamp-final-project/issues"
-  },
-  "homepage": "https://github.com/ashhanai/blockchain-developer-bootcamp-final-project#readme",
   "devDependencies": {
     "@openzeppelin/contracts": "4.3.2",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "@truffle/hdwallet-provider": "^1.6.0",
     "chai": "^4.3.4"
   }
 }
