--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blockchain-developer-bootcamp-final-project",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx truffle test"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "4.3.2",
