Update homepage in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blockchain-developer-bootcamp-final-project-client",
   "version": "0.1.0",
+  "homepage": "https://ashhanai.github.io/blockchain-developer-bootcamp-final-project/client/public/",
   "dependencies": {
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/contracts": "^5.5.0",
